refactor : replace remaining uses of guava ImmutableSet with Java's Set.of() Fixes #1353